# NumFys-Exercises

./: README.md
assignments/pre-assignment/: random_walk.jl
cpp-testing/: armadillo.cpp  test.cpp  test2.cpp
excercises/: ex1_bak_sneppen.jl  ex3-4.jl  ex5.jl
rust-testing/testing/: Cargo.toml
rust-testing/testing/src/: main.rs
